--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     font-weight: 400;
     font-style: normal;
   } */
-  
+
 
 h1 {
     background-color: aquamarine;
@@ -42,12 +42,23 @@ h1 {
     }
 }
 
-.overlay-image {
+
+.logoBg {
     position: absolute;
     top: 20%;
-    height: 20%;
     width: 100%;
-    opacity: 0.5;
+    height: 20%;
+    background-color: black;
+    opacity: 0.7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    & .overlay-image {
+        opacity: 1;
+        width: 70%;
+        height: 50%;
+    }
 }
 
 .rightSidePortion {
@@ -58,7 +69,6 @@ h1 {
     flex-direction: column;
 
 }
-
 
 .formIntro {
     background-color: rgb(229, 185, 128);
@@ -85,6 +95,7 @@ h1 {
         display: block;
         font-weight: 800;
     }
+
     & input {
         width: 60%;
         height: 55%;
@@ -92,6 +103,7 @@ h1 {
         font-size: 1.2rem;
         padding: 5px;
         background-color: bisque;
+        border-color: #E5E7EB;
     }
 }
 
@@ -105,7 +117,8 @@ h1 {
         width: 174px;
         height: 40px;
         font-size: 1.1rem;
-        background-color: rgb(126, 240, 164);
+        background-color: #596D48;
+        color: aliceblue;
         margin-bottom: 12px;
     }
 }
